samples/_failures_safe/1761355388_72da27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8127787.c: In function ‘main’:
./samples/SAFE/__tmp_c8127787.c:171:5: error: expected expression at end of input
  171 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_c8127787.c:171:5: error: expected declaration or statement at end of input
